@@ -4,7 +4,11 @@
 * Fixed SEO redirection algorithm
 * Improved memory cleaning
 * Improved site protection algorithm
+* Fixed currency calculator
+* Fixed localhost detection
 * Removed obsolete PHP codes
+* Improved security
+* Improved user interface
 
 = 8.3.7 =
 * Improved hiding of the navigation menu by geolocation
